--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jspdf": "^4.0.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "openai": "^6.22.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "^3.7.0"
